Closed Bug 464983 Opened 17 years ago Closed 17 years ago

Workers: Throw exceptions properly from XHR status getters and fake abort events in race conditions

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.1b3

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

(Keywords: fixed1.9.1)

Attachments

(2 files)

Attached patch Patch, v1Splinter Review
A few more tweaks to XHR on worker threads to match main thread behavior. With test case!
Attachment #348250 - Flags: superreview?(jonas)
Attachment #348250 - Flags: review?(jonas)
Attached patch ChangesSplinter Review
Jonas, fwiw, these are the changes since we last went over this patch.
Attachment #348250 - Flags: superreview?(jonas)
Attachment #348250 - Flags: superreview+
Attachment #348250 - Flags: review?(jonas)
Attachment #348250 - Flags: review+
Marking this a blocker. Trivial patch but significant impact from a compatibility point of view.
Flags: blocking1.9.1+
Priority: -- → P2
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.9.1 → mozilla1.9.1b3
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: