Bug 464983 - 'Workers: Throw exceptions properly from XHR status getters and fake abort events in race conditions.' r+sr=sicking, a=blocking1.9.1+.